--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
   <body class="getai-app">
     <div id="root"></div>
     <script type="text/babel" data-presets="react,typescript" data-type="module" src="/index.tsx"></script>
-  </body>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
