--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
       .aspect-w-16 > *,
       .aspect-h-9 > * { position: absolute; height: 100%; width: 100%; top: 0; right: 0; bottom: 0; left: 0; }
     </style>
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="./index.css">
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="getai-app">
     <div id="root"></div>
-    <script type="text/babel" data-presets="react,typescript" data-type="module" src="/index.tsx"></script>
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
